; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_act.c_bta_ag_post_sco_close.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_act.c_bta_ag_post_sco_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }

@BTA_AG_POST_SCO_NONE = common dso_local global i8* null, align 8
@BTA_AG_IN_CALL_CONN_RES = common dso_local global i32 0, align 4
@BTA_AG_OUT_CALL_ORIG_RES = common dso_local global i32 0, align 4
@BTA_AG_END_CALL_RES = common dso_local global i32 0, align 4
@BTA_AG_IN_CALL_RES = common dso_local global i32 0, align 4
@BTA_AG_FEAT_NOSCO = common dso_local global i32 0, align 4
@BTA_AG_POST_SCO_RING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_post_sco_close(%struct.TYPE_8__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %73 [
    i32 128, label %8
    i32 132, label %16
    i32 129, label %24
    i32 131, label %32
    i32 130, label %40
  ]

8:                                                ; preds = %2
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @bta_ag_rfc_do_close(%struct.TYPE_8__* %9, i32* %10)
  %12 = load i8*, i8** @BTA_AG_POST_SCO_NONE, align 8
  %13 = ptrtoint i8* %12 to i32
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  br label %74

16:                                               ; preds = %2
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = load i32, i32* @BTA_AG_IN_CALL_CONN_RES, align 4
  %19 = call i32 @bta_ag_send_call_inds(%struct.TYPE_8__* %17, i32 %18)
  %20 = load i8*, i8** @BTA_AG_POST_SCO_NONE, align 8
  %21 = ptrtoint i8* %20 to i32
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %74

24:                                               ; preds = %2
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %26 = load i32, i32* @BTA_AG_OUT_CALL_ORIG_RES, align 4
  %27 = call i32 @bta_ag_send_call_inds(%struct.TYPE_8__* %25, i32 %26)
  %28 = load i8*, i8** @BTA_AG_POST_SCO_NONE, align 8
  %29 = ptrtoint i8* %28 to i32
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  br label %74

32:                                               ; preds = %2
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %34 = load i32, i32* @BTA_AG_END_CALL_RES, align 4
  %35 = call i32 @bta_ag_send_call_inds(%struct.TYPE_8__* %33, i32 %34)
  %36 = load i8*, i8** @BTA_AG_POST_SCO_NONE, align 8
  %37 = ptrtoint i8* %36 to i32
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  store i32 %37, i32* %39, align 4
  br label %74

40:                                               ; preds = %2
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %42 = load i32, i32* @BTA_AG_END_CALL_RES, align 4
  %43 = call i32 @bta_ag_send_call_inds(%struct.TYPE_8__* %41, i32 %42)
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %45 = load i32, i32* @BTA_AG_IN_CALL_RES, align 4
  %46 = call i32 @bta_ag_send_call_inds(%struct.TYPE_8__* %44, i32 %45)
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %48 = call i32 @bta_ag_inband_enabled(%struct.TYPE_8__* %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %64

50:                                               ; preds = %40
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = load i32, i32* @BTA_AG_FEAT_NOSCO, align 4
  %55 = and i32 %53, %54
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %64, label %57

57:                                               ; preds = %50
  %58 = load i32, i32* @BTA_AG_POST_SCO_RING, align 4
  %59 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %60 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %59, i32 0, i32 0
  store i32 %58, i32* %60, align 4
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %62 = load i32*, i32** %4, align 8
  %63 = call i32 @bta_ag_sco_open(%struct.TYPE_8__* %61, i32* %62)
  br label %72

64:                                               ; preds = %50, %40
  %65 = load i8*, i8** @BTA_AG_POST_SCO_NONE, align 8
  %66 = ptrtoint i8* %65 to i32
  %67 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %68 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %67, i32 0, i32 0
  store i32 %66, i32* %68, align 4
  %69 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %70 = load i32*, i32** %4, align 8
  %71 = call i32 @bta_ag_send_ring(%struct.TYPE_8__* %69, i32* %70)
  br label %72

72:                                               ; preds = %64, %57
  br label %74

73:                                               ; preds = %2
  br label %74

74:                                               ; preds = %73, %72, %32, %24, %16, %8
  ret void
}

declare dso_local i32 @bta_ag_rfc_do_close(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @bta_ag_send_call_inds(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @bta_ag_inband_enabled(%struct.TYPE_8__*) #1

declare dso_local i32 @bta_ag_sco_open(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @bta_ag_send_ring(%struct.TYPE_8__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
